# Crescendo

./: .gitignore  README.md  ai.py  api.py  main.py  pyproject.toml  test.py
app/: package-lock.json  package.json  rsbuild.config.ts
app/src/: App.css  App.tsx
app/src/components/: atoms.ts  chat.tsx  chat_log.tsx  context.tsx
gui/: gui2.html  index.html  old_index.html
server/: ai.py  api.py  helpers.py
static/: index.52a19e07.js  index.8256f35e.js  index.html  lib-react.1b9f4c21.js  styles.css
static/css/: index.17a4ade9.css  index.688abd08.css  index.edb377bd.css
static/js/: 53.22729d66.js  954.02f5c6de.js  954.0dc21923.js  index.26ab8ca7.js  index.50705458.js  index.78a67b3b.js  index.a0c36ad3.js  index.aa8fcff3.js  index.d89cd167.js  index.db0e177f.js  lib-react.871fdac3.js
