[tool.poetry]
name = "crescendo"
version = "0.1.0"
description = "A web servable voice agent"
authors = ["Tim Smeets <tla.smeets@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
