[project]
name = "crescendo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "kokoro>=0.9.4",
    "ollama>=0.4.8",
    "pip>=25.1.1",
    "soundfile>=0.13.1",
    "websockets>=15.0.1",
]
